--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 html {
   font-family: sans-serif;
   display: flex;
-  display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: #444444;
+  line-height: 1.3;
 }
+
 body {
   display: flex;
   flex-direction: column;
@@ -13,15 +15,44 @@ body {
   align-items: center;
   max-width: 600px;
 }
-h1 {
+
+.header {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #eeeeee;
+  margin-bottom: 0.5rem;
 }
+
+.block {
+  width: 2.7rem;
+  height: 2.7rem;
+}
+
+h1 {
+  margin: 0;
+}
+
 p {
   margin-top: 0;
 }
+
 section {
-  background-color: lavender;
-  padding: 1rem;
   width: 100%;
-  box-sizing: border-box;
+  /* padding: 1rem;
+  box-sizing: border-box; */
+}
+
+.bg-color {
+  background-color: lavender;
   margin-bottom: 1rem;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+li {
+  margin-bottom: 0.5rem;
 }
